--- a/wild_books/pubspec.yaml
+++ b/wild_books/pubspec.yaml
@@ -43,10 +43,7 @@ dev_dependencies:
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  flutter_lints: ^2.0.0
-  
-  flutter_test:
-    sdk: flutter
+  flutter_lints: ^2.0.
 
 
   # The following adds the Cupertino Icons font to your application.
