--- a/wild_books/pubspec.yaml
+++ b/wild_books/pubspec.yaml
@@ -32,13 +32,9 @@ dependencies:
   flutter:
     sdk: flutter
   geolocator: ^9.0.2
+  supabase_flutter: ^1.10.11
 
 dev_dependencies:
-  # The "flutter_lints" package below contains a set of recommended lints to
-  # encourage good coding practices. The lint set provided by the package is
-  # activated in the `analysis_options.yaml` file located at the root of your
-  # package. See that file for information about deactivating specific lint
-  # rules and activating additional ones.
   flutter_lints: ^2.0.0
   flutter_test:
     sdk: flutter
@@ -55,7 +51,6 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - lib/images/book2.png
-
   #   - images/a_dot_ham.jpeg
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
