--- a/wild_books/pubspec.yaml
+++ b/wild_books/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   flutter:
     sdk: flutter
   geolocator: ^9.0.2
+  provider: ^6.0.5
   supabase_flutter: ^1.10.11
 
 dev_dependencies:
