--- a/wild_books/pubspec.yaml
+++ b/wild_books/pubspec.yaml
@@ -34,6 +34,10 @@ dependencies:
   geolocator: ^9.0.2
   provider: ^6.0.5
   supabase_flutter: ^1.10.11
+  flutter_map: ^5.0.0
+  latlong2: ^0.9.0
+  url_launcher: ^6.1.12
+  flutter_map_animations: ^0.4.1
 
 dev_dependencies:
   flutter_lints: ^2.0.0
