--- a/wild_books/pubspec.yaml
+++ b/wild_books/pubspec.yaml
@@ -38,6 +38,8 @@ dependencies:
   latlong2: ^0.9.0
   url_launcher: ^6.1.12
   flutter_map_animations: ^0.4.1
+  google_nav_bar: ^5.0.6
+  
 
 dev_dependencies:
   flutter_lints: ^2.0.0
