added time ago to homepage book list

--- a/wild_books/pubspec.yaml
+++ b/wild_books/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   url_launcher: ^6.1.12
   flutter_map_animations: ^0.4.1
   google_nav_bar: ^5.0.6
+  timeago: ^3.5.0
   
 
 dev_dependencies:
