--- a/wild_books/pubspec.yaml
+++ b/wild_books/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   flutter_map_animations: ^0.4.1
   google_nav_bar: ^5.0.6
   timeago: ^3.5.0
+  quickalert: ^1.0.1
   
 
 dev_dependencies:
