--- a/wild_books/pubspec.yaml
+++ b/wild_books/pubspec.yaml
@@ -31,17 +31,17 @@ dependencies:
   cupertino_icons: ^1.0.2
   flutter:
     sdk: flutter
-  geolocator: ^9.0.2
-  provider: ^6.0.5
-  supabase_flutter: ^1.10.11
   flutter_map: ^5.0.0
-  latlong2: ^0.9.0
-  url_launcher: ^6.1.12
   flutter_map_animations: ^0.4.1
+  geolocator: ^9.0.2
   google_nav_bar: ^5.0.6
-  timeago: ^3.5.0
+  image_picker: ^1.0.1
+  latlong2: ^0.9.0
+  provider: ^6.0.5
   quickalert: ^1.0.1
-  
+  supabase_flutter: ^1.10.11
+  timeago: ^3.5.0
+  url_launcher: ^6.1.12
 
 dev_dependencies:
   flutter_lints: ^2.0.0
