--- a/wild_books/pubspec.yaml
+++ b/wild_books/pubspec.yaml
@@ -71,7 +71,7 @@ flutter:
     - lib/images/wildbooks1.png
     - lib/images/wildbooks2.png
     - lib/images/wildbooks3.png
-    - lib/images/WB logo.png
+    - lib/images/WB_logo.png
 
   #   - images/a_dot_ham.jpeg
   # An image asset can refer to one or more resolution-specific "variants", see
